--- a/blog-front/html/main.html
+++ b/blog-front/html/main.html
@@ -40,17 +40,16 @@
         </div>
       </header>
 
-      <div class = "row">
-        <div class = "col-9" id = "search-box">
-            <input type = "search" id = "search"/>
-        </div>
-        <div class = "col-3" id = "search-button">
-            <input type = "button" value = "search">
-        </div>
-      </div>
+
+    <div class = "col-9" id = "search-area">
+        <input type = "text" id = "search-input"/>
+        <input type = "button" class="btn btn-dark" id = "search-button" value = "search">
+    </div>
+
 
 
 
     
 </body>
+<script src = "../js/main.js"></script>
 </html>
