--- a/blog-front/html/track.html
+++ b/blog-front/html/track.html
@@ -5,20 +5,58 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href = "../css/main.css" rel = "stylesheet"> 
+    <link href = "../css/track.css" rel = "stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
-<body>
+    <header class="p-3 mb-3 border-bottom">
+        <div class="container">
+          <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+            <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-dark text-decoration-none">
+              <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"/></svg>
+            </a>
+    
+            <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+              <li><a href="#" class="nav-link px-2 link-secondary">Home</a></li>
+              <li><a href="#" class="nav-link px-2 link-dark">write</a></li>
+              <li><a href="#" class="nav-link px-2 link-dark"></a></li>
+              <li><a href="#" class="nav-link px-2 link-dark"></a></li>
+            </ul>
+    
+            <div class="dropdown text-end">
+              <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32" class="rounded-circle">
+              </a>
+              <ul class="dropdown-menu text-small">
+                <li><a class="dropdown-item" href="#">New project...</a></li>
+                <li><a class="dropdown-item" href="#">Settings</a></li>
+                <li><a class="dropdown-item" href="#">Profile</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="#">Sign out</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </header>
+
     <div id = "track-area">
-        <!-- <div id = "title-area">
-            <span id = "title">Title</span>
-        </div>
-        <div id = "artist-area">
-            <span id = "artist">Artist</span>
-        </div>
-        <div id = "album-area">
-            <span id = "album">Album</span>
-        </div>
-        <div id = "image-area">
-            <img id = "image" src = "" style = "width: 40%;"></img>
+        <!-- <div class = "row">
+            <div class = "col-4">
+                <span>albumCover</span>
+            </div>
+            <div class = "col-8">
+                <div class = "row">
+                    <div class = "col-8">
+                        <span>title</span>
+                    </div>
+                    <div class = "col-8">
+                        <span>artist</span>
+                    </div>
+                    <div class = "col-8">
+                        <span>album</span>
+                    </div>
+                </div>
+            </div>        
         </div> -->
     </div>
 </body>
