--- a/blog-front/html/detail.html
+++ b/blog-front/html/detail.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href = "../css/main.css" rel = "stylesheet"> 
-    <link href = "../css/track.css" rel = "stylesheet">
+    <link href = "../css/main.css" rel = "stylesheet">
+    <link href = "../css/detail.css" rel = "stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
+<body>
     <header class="p-3 mb-3 border-bottom">
         <div class="container">
           <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
@@ -38,8 +39,7 @@
           </div>
         </div>
       </header>
-
     <div id = "track-area"></div>
 </body>
-<script src = "../js/track.js"></script>
+<script src = "../js/detail.js"></script>
 </html>
