--- a/blog-front/html/detail.html
+++ b/blog-front/html/detail.html
@@ -39,7 +39,30 @@
           </div>
         </div>
       </header>
+
+
     <div id = "track-area"></div>
+
+    <div id = "modal-area">
+        <div class="modal fade" id="exampleModal" tabindex="-1">
+            <div class="modal-dialog modal-xl">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <textarea id = "tag-input"></textarea>
+                    <textarea id = "board-input"></textarea>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                  <button type="button" class="btn btn-dark" id = "write-button">Write</button>
+                </div>
+              </div>
+            </div>
+          </div>
+    </div>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 <script src = "../js/detail.js"></script>
 </html>
