feat: 글 작성 프론트

--- a/blog-front/html/detail.html
+++ b/blog-front/html/detail.html
@@ -51,8 +51,11 @@
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <textarea id = "tag-input"></textarea>
-                    <textarea id = "board-input"></textarea>
+                    <div id = "tag-area">
+                        <div id = "hashtag-container"></div>
+                        <textarea id = "tag-input" placeholder = "Make Your Tag"></textarea>
+                    </div>
+                    <textarea id = "board-input" placeholder = "Write Your Story"></textarea>
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
