--- a/blog-front/html/index.html
+++ b/blog-front/html/index.html
@@ -19,6 +19,7 @@
            <i class="fa fa-key"></i>
          </span>
         <input type="password" class="pass"placeholder="password" id = "password"/>
+        <span id = "join-button"><a style = "text-decoration: none; color:lightgray;" href = "join.html">Not signed up yet?</a></span>
     </div>
 </body>
 <script src = "../js/index.js"></script>
