--- a/blog-front/html/main.html
+++ b/blog-front/html/main.html
@@ -42,8 +42,10 @@
 
 
     <div class = "col-9" id = "search-area">
-        <input type = "text" id = "search-input"/>
+      <div id = "search-track-area">
+        <input type = "text" id = "search-input" placeholder = "Search For Track..."/>
         <input type = "button" class="btn btn-dark" id = "search-button" value = "search">
+      </div>
     </div>
 
 
