--- a/blog-front/html/detail.html
+++ b/blog-front/html/detail.html
@@ -40,14 +40,14 @@
         </div>
       </header>
 
-
+    <div id = "alert-area"></div>
     <div id = "track-area"></div>
 
     <div id = "modal-area">
         <div class="modal fade" id="exampleModal" tabindex="-1">
             <div class="modal-dialog modal-xl">
               <div class="modal-content">
-                <div class="modal-header">
+                <div class="header" style = "padding: 10px; text-align: right;">
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
@@ -57,14 +57,28 @@
                     </div>
                     <textarea id = "board-input" placeholder = "Write Your Story"></textarea>
                 </div>
-                <div class="modal-footer">
+                <div class="footer" style = "padding: 20px; text-align: right;">
                   <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                  <button type="button" class="btn btn-dark" id = "write-button">Write</button>
+                  <button type="button" class="btn btn-dark" data-bs-dismiss="modal" id = "write-button">Write</button>
                 </div>
               </div>
             </div>
           </div>
     </div>
+
+    <div id = "board-area">
+        <div class="form-check form-check-inline">
+            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1" checked>
+            <label class="form-check-label" for="inlineRadio1">최신순</label>
+        </div>
+        <div class="form-check form-check-inline">
+            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+            <label class="form-check-label" for="inlineRadio2">추천순</label>
+        </div>
+        <div class = "row" id = "board-element-area" style = "margin-top: 30px;"></div>
+        </div>
+    </div>
+
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 <script src = "../js/detail.js"></script>
