feat: 좋아요 관련 프론트

--- a/blog-front/html/board.html
+++ b/blog-front/html/board.html
@@ -40,6 +40,14 @@
         </div>
       </header>
     <div id = "board-area"></div>
+    <div id = "like-area">
+        <div id = "like-button-area">
+            <span id = "like-button">♡</span>
+        </div>
+        <div id = "like-alert-area">
+            <span id = "like-alert">0 Like</span>
+        </div>
+    </div>
     <div id = "comment-area">
         <input type = "text" id = "comment-input" placeholder = "Comment">
         <button type = "submit" class = "btn btn-dark" id = "comment-write-button">write</button>
