feat: hashtag 매퍼 추가 및 가입 프론트

--- a/blog-front/html/join.html
+++ b/blog-front/html/join.html
@@ -5,9 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href = "../css/join.css" rel = "stylesheet">
+
 </head>
 <body>
-    <h1>JOIN PAGE</h1>
+    <div>
+        <h2 style = "color: gray;">Join Page</h2>
+        <input type="text" placeholder="userId" id = "userId"/>
+        <input type="text" placeholder="password" id = "password"/>
+        <input type="text" placeholder="nickname" id = "nickname"/>
+        <button type = "button" class = "btn btn-dark">Join</button>
+    </div>
+    
     
 </body>
 </html>
