--- a/blog-front/html/join.html
+++ b/blog-front/html/join.html
@@ -14,9 +14,10 @@
         <input type="text" placeholder="userId" id = "userId"/>
         <input type="text" placeholder="password" id = "password"/>
         <input type="text" placeholder="nickname" id = "nickname"/>
-        <button type = "button" class = "btn btn-dark">Join</button>
+        <button type = "button" class = "btn btn-dark" id = "join-button">Join</button>
     </div>
     
     
 </body>
+<script src = "../js/join.js"></script>
 </html>
