feat: select list of board by hashtag keyword and add field to dto

--- a/blog-front/html/detail.html
+++ b/blog-front/html/detail.html
@@ -44,7 +44,7 @@
     <div id = "track-area"></div>
 
     <div id = "modal-area">
-        <div class="modal fade" id="exampleModal" tabindex="-1">
+        <div class="modal fade" id="boardModal" tabindex="-1">
             <div class="modal-dialog modal-xl">
               <div class="modal-content">
                 <div class="header" style = "padding: 10px; text-align: right;">
