--- a/blog-front/html/detail.html
+++ b/blog-front/html/detail.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link href = "../css/main.css" rel = "stylesheet">
     <link href = "../css/detail.css" rel = "stylesheet">
+    <link href = "../css/file.css" rel = "stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 <body>
@@ -51,6 +52,22 @@
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
+                  <div class="container">
+                    <div class="panel">
+                      <div class="button_outer">
+                        <div class="btn_upload">
+                          <input type="file" id="upload_file" name="">
+                          Upload Image
+                        </div>
+                        <div class="processing_bar"></div>
+                        <div class="success_box"></div>
+                      </div>
+                    </div>
+                    <div class="error_msg"></div>
+                    <div class="uploaded_file_view" id="uploaded_view">
+                      <span class="file_remove">X</span>
+                    </div>
+                  </div>
                     <div id = "tag-area">
                         <div id = "hashtag-container"></div>
                         <textarea id = "tag-input" placeholder = "Make Your Tag"></textarea>
