refactor: 글로벌 변수 분리 및 파일 업로드 관련 프론트

--- a/blog-front/html/track.html
+++ b/blog-front/html/track.html
@@ -41,5 +41,6 @@
 
     <div id = "track-area"></div>
 </body>
+<script src = "../js/global/global.js"></script>
 <script src = "../js/track.js"></script>
 </html>
