--- a/blog-front/html/detail.html
+++ b/blog-front/html/detail.html
@@ -52,26 +52,22 @@
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                  <div class="container">
-                    <div class="panel">
-                      <div class="button_outer">
-                        <div class="btn_upload">
-                          <input type="file" id="upload_file" name="">
-                          Upload Image
-                        </div>
-                        <div class="processing_bar"></div>
-                        <div class="success_box"></div>
-                      </div>
-                    </div>
-                    <div class="error_msg"></div>
-                    <div class="uploaded_file_view" id="uploaded_view">
-                      <span class="file_remove">X</span>
-                    </div>
-                  </div>
                     <div id = "tag-area">
                         <div id = "hashtag-container"></div>
                         <textarea id = "tag-input" placeholder = "Make Your Tag"></textarea>
                     </div>
+                    <div class="container">
+                      <div class="button_outer">
+                        <div class="btn_upload">
+                          <input type="file" id="upload_file">
+                          <span>Upload Image</span>
+                        </div>
+                        <div class="add_box"></div>
+                      </div>
+                    <div class="error_msg"></div>
+                    <div class="uploaded_file_view" id="uploaded_view">
+                    </div>
+                  </div>
                     <textarea id = "board-input" placeholder = "Write Your Story"></textarea>
                 </div>
                 <div class="footer" style = "padding: 20px; text-align: right;">
@@ -98,5 +94,6 @@
 
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+<script src = "../js/global/global.js"></script>
 <script src = "../js/detail.js"></script>
 </html>
