--- a/blog-front/html/index.html
+++ b/blog-front/html/index.html
@@ -22,5 +22,6 @@
         <span id = "join-button"><a style = "text-decoration: none; color:lightgray;" href = "join.html">Not signed up yet?</a></span>
     </div>
 </body>
+<script src = "../js/global/global.js"></script>
 <script src = "../js/index.js"></script>
 </html>
